--- a/App/Scss/main.css
+++ b/App/Scss/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
 *, ::after, ::before {
   margin: 0;
   padding: 0;
@@ -6,7 +6,75 @@
           box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: 'Inter', sans-serif;
+}
+
+p {
+  font-size: 1.2rem;
+}
+
+@media screen and (min-width: 600px) {
+  p {
+    font-size: 1.6rem;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  p {
+    font-size: 1.8rem;
+  }
+}
+
+h1 {
+  font-size: 9rem;
+  font-weight: 900;
+}
+
+@media screen and (min-width: 900px) {
+  h1 {
+    font-size: 18rem;
+  }
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 800;
+}
+
+@media screen and (min-width: 900px) {
+  h2 {
+    font-size: 3rem;
+  }
+}
+
+h2, h3 {
+  word-spacing: 2px;
+  letter-spacing: 1.3px;
+}
+
+h3 {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+@media screen and (min-width: 900px) {
+  h3 {
+    font-size: 2.6rem;
+  }
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+@media screen and (min-width: 900px) {
+  h4 {
+    font-size: 1.8rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
