creating the header container and add functionality to it

--- a/App/Scss/main.scss
+++ b/App/Scss/main.scss
@@ -2,17 +2,21 @@
  @import  './partials/variables';
  @import  './partials/mixins';
  @import  './partials/typogprahy';
+ @import './partials/header';
 
  body{
     height: 100vh;
-    background-image: url(/App/assets/mobile/bg-image-daytime.jpg);
+    padding: 2rem;
+    background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/mobile/bg-image-daytime.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+      background-size: cover;
     @include tablette{
-       background-image: url(/App/assets/tablet/bg-image-daytime.jpg);
+       background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/tablet/bg-image-daytime.jpg);
     }
     @include desktop{
-       background-image: url(/App/assets/desktop/bg-image-daytime.jpg);
+       background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/desktop/bg-image-daytime.jpg);
     }
  }
+
+
+ 
