--- a/App/Scss/main.css
+++ b/App/Scss/main.css
@@ -18,7 +18,7 @@ p {
   font-size: 1.2rem;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 600px) {
   p {
     font-size: 1.6rem;
   }
@@ -78,23 +78,51 @@ h4 {
   }
 }
 
-body {
-  height: 100vh;
-  background-image: url(/App/assets/mobile/bg-image-daytime.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-@media screen and (min-width: 500px) {
+.quotesContainer p {
+  color: white !important;
+}
+
+.quote__text, .quote__author {
+  color: white !important;
+  line-height: 2;
+  max-width: 50ch;
+}
+
+.quote__refresh {
+  -webkit-transform: translate(1rem, -2rem);
+          transform: translate(1rem, -2rem);
+  cursor: pointer;
+}
+
+body {
+  height: 100vh;
+  padding: 2rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url(/App/assets/mobile/bg-image-daytime.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/mobile/bg-image-daytime.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media screen and (min-width: 600px) {
   body {
-    background-image: url(/App/assets/tablet/bg-image-daytime.jpg);
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url(/App/assets/tablet/bg-image-daytime.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/tablet/bg-image-daytime.jpg);
   }
 }
 
 @media screen and (min-width: 800px) {
   body {
-    background-image: url(/App/assets/desktop/bg-image-daytime.jpg);
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url(/App/assets/desktop/bg-image-daytime.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/desktop/bg-image-daytime.jpg);
   }
 }
 /*# sourceMappingURL=main.css.map */
