--- a/App/Scss/main.css
+++ b/App/Scss/main.css
@@ -33,6 +33,7 @@ p {
 h1 {
   font-size: 9rem;
   font-weight: 900;
+  margin-block: 2rem;
 }
 
 @media screen and (min-width: 800px) {
@@ -43,7 +44,7 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  font-weight: 800;
+  font-weight: 600;
 }
 
 @media screen and (min-width: 800px) {
@@ -59,7 +60,7 @@ h2, h3 {
 
 h3 {
   font-size: 1.8rem;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 @media screen and (min-width: 800px) {
@@ -103,9 +104,84 @@ header {
   cursor: pointer;
 }
 
+.myRegion {
+  margin-top: 12rem !important;
+  color: white;
+  position: relative;
+}
+
+.myRegion__dayPeriod, .myRegion__timeContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.myRegion__dayPeriod img, .myRegion__timeContainer img {
+  margin-right: 1.5rem;
+}
+
+.myRegion__timeContainer {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.myRegion__timeContainer span {
+  -webkit-transform: translateY(3rem);
+          transform: translateY(3rem);
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin-left: 0.3rem;
+}
+
+.myRegion__more {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: white;
+  margin-top: 8rem;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  color: rgba(48, 48, 48, 0.637);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 36px;
+  width: 110px;
+  padding: 4px;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.myRegion__more p {
+  text-transform: uppercase;
+  margin-left: 10px;
+  font-weight: 600;
+  letter-spacing: 1.8px;
+  font-size: 1.3rem;
+}
+
+.myRegion__more img {
+  height: 100%;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+@media screen and (min-width: 800px) {
+  .myRegion__more {
+    position: absolute;
+    height: 50px;
+    left: 70%;
+    top: 50%;
+  }
+}
+
 body {
-  height: 100vh;
-  padding: 2rem;
+  padding: 2.5rem 3rem;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url(/App/assets/mobile/bg-image-daytime.jpg);
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/mobile/bg-image-daytime.jpg);
   background-repeat: no-repeat;
@@ -121,6 +197,7 @@ body {
 
 @media screen and (min-width: 800px) {
   body {
+    padding-left: 10rem;
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url(/App/assets/desktop/bg-image-daytime.jpg);
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/desktop/bg-image-daytime.jpg);
   }
