--- a/App/Scss/partials/_typogprahy.scss
+++ b/App/Scss/partials/_typogprahy.scss
@@ -20,6 +20,7 @@ p{
 h1{
     font-size: 9rem;
     font-weight:900;
+    margin-block: 2rem;
     @include desktop{
         font-size: 18rem;
     }
@@ -27,7 +28,7 @@ h1{
 
 h2{
     font-size: 2rem;
-    font-weight:800;
+    font-weight:600;
     @include desktop{
         font-size: 3rem;
     }
@@ -38,7 +39,7 @@ h2,h3{
 }
 h3{
     font-size: 1.8rem;
-    font-weight: 500;
+    font-weight: 300;
   @include desktop{
     font-size:2.6rem ;
   }
