--- a/App/Scss/main.scss
+++ b/App/Scss/main.scss
@@ -6,8 +6,7 @@
  @import './partials/myRegion';
 
  body{
-   //  height: 100vh;
-    padding: 2.5rem 3rem;
+   //  padding: 2.5rem 3rem;
     background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/mobile/bg-image-daytime.jpg);
     background-repeat: no-repeat;
       background-size: cover;
@@ -15,10 +14,15 @@
        background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/tablet/bg-image-daytime.jpg);
     }
     @include desktop{
-      padding-left: 10rem;
+      // padding-left: 10rem;
        background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/desktop/bg-image-daytime.jpg);
     }
  }
 
-
- 
+main,header{
+    padding: 2.5rem 3rem;
+   
+   @include desktop{
+         padding-left: 10rem;
+   }
+}
