--- a/App/Scss/partials/_myRegion.scss
+++ b/App/Scss/partials/_myRegion.scss
@@ -20,48 +20,46 @@
         }
     }
     &__more{
-        display:flex;
-        background-color: white;
-        margin-top: 8rem;
-        display: inline-flex;
-        color:rgba(48, 48, 48, 0.637) ;
-        justify-content: space-between;
-        align-items: center;
-        height: 36px;
-        width: 110px;
          padding: 4px;
+        align-items: center;
+        background-color: white;
         border-radius: 30px;
+        color:rgba(48, 48, 48, 0.637) ;
+        display: inline-flex;
+        display:flex;
+        height: 36px;
+        justify-content: space-between;
+        margin-top: 8rem;
+        width: 110px;
         p{
             text-transform: uppercase;
             margin-left:10px;
             font-weight: 600;
             letter-spacing: 1.8px;
             font-size: 1.3rem;
+            transition: transform 0.3s;
         }
         cursor: pointer;
         img{
-            height: 100%;
-            transform: rotate(180deg);
-            
+            height: 100%;            
         }
 
         @include desktop{
           position: absolute;
-        //   left: -70%;
-        height: 50px;
-        left: 70%;
-        top: 50%;
+          height: 50px;
+          left: 70%;
+          top: 50%;
         }
     }
 
     // region date info
     &__date{
-         padding: 2rem 3rem;
          display: grid;
          grid-template-columns: 1fr ;
-        color: rgba(48, 48, 48, 0.637);
+         padding: 2rem 3rem;
         backdrop-filter: blur(1rem);
         background-color: rgba(255, 255, 255, 0.65);
+        color: rgba(48, 48, 48, 0.637);
         h2{
             color:rgba(48, 48,48,1) ;
             @include desktop{
@@ -86,10 +84,10 @@
         }
         @include desktop{
            grid-template-columns: 1fr 1fr;
-        //    justify-items: center;
            padding-block: 4rem;
            padding-left: 10rem;
         }
     }
 
 }
+
