--- a/App/Scss/main.scss
+++ b/App/Scss/main.scss
@@ -6,9 +6,10 @@
  @import './partials/myRegion';
 
  body{
-   //  padding: 2.5rem 3rem;
     background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/mobile/bg-image-daytime.jpg) ;
-      background-size: cover;
+    background-repeat: no-repeat;
+    height: fit-content;
+    background-size: cover;
     @include tablette{
       background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(/App/assets/tablet/bg-image-daytime.jpg);
     }
